<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.sarge.jove</groupId>
    <artifactId>JOVE</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>JOVE</name>
    <description>JOVE</description>

    <properties>
<!--        <java.version>23</java.version>-->
        <maven.compiler.target>23</maven.compiler.target>
        <maven.compiler.source>23</maven.compiler.source>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <release>23</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

<!--
default VM arg: -noverify
https://stackoverflow.com/questions/34821047/java-lang-verifyerror-inconsistent-stackmap-frames
-->

    <dependencies>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
